--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@modelcontextprotocol/sdk": "^1.0.0",
     "@types/express": "^5.0.3",
     "ajv": "^8.12.0",
+    "ajv-formats": "^3.0.1",
     "express": "^5.1.0",
     "keytar": "^7.9.0"
   },
