update pkg json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "main": "dist/server.js",
   "bin": {
-    "super-mcp-router": "dist/cli.js"
+    "mcp-gateway": "dist/cli.js"
   },
   "files": [
     "dist/",
@@ -21,7 +21,8 @@
     "start": "node dist/cli.js --config ./super-mcp-config.json",
     "test": "vitest run",
     "clean": "rm -rf dist/",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "remote:router": "npx github:sting8k/mcp-gateway --config ./super-mcp-config.json"
   },
   "keywords": [
     "mcp",
