fix: update to use GitHub as primary installation method
- Change Quick Start to use github:sting8k/mcp-gateway instead of npm
- Reorder installation methods (GitHub first, npm second)
- Fix repository URLs in package.json (JoshuaWohle/Super-MCP → sting8k/mcp-gateway)
- Matches current setup where dist/ is committed for direct GitHub execution

--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JoshuaWohle/Super-MCP.git"
+    "url": "git+https://github.com/sting8k/mcp-gateway.git"
   },
   "bugs": {
-    "url": "https://github.com/JoshuaWohle/Super-MCP/issues"
+    "url": "https://github.com/sting8k/mcp-gateway/issues"
   },
-  "homepage": "https://github.com/JoshuaWohle/Super-MCP#readme",
+  "homepage": "https://github.com/sting8k/mcp-gateway#readme",
   "engines": {
     "node": ">=18.0.0"
   },
